# scheduler-back

./: .gitignore  Cargo.toml  Dockerfile
.cargo/: config.toml
entity/: Cargo.toml
entity/src/: category.rs  group.rs  lib.rs  links.rs  mod.rs  prelude.rs  schedule.rs  schedule_group.rs  task.rs  user.rs  user_group.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241127_174046_create_table_schedule.rs  m20241127_174053_create_table_category.rs  m20241127_174103_create_table_task.rs  m20241127_174141_create_table_group.rs  m20241127_174148_create_table_user.rs  m20241127_174159_create_table_user_group.rs  m20241127_174205_create_table_schedule_group.rs
sql_queries/: create_table_label.sql  create_table_schedule.sql  create_table_task.sql  create_table_users.sql
src/: errors.rs  lib.rs  main.rs
src/schedule_service/: get_service.rs  mod.rs  models.rs  palette.rs  services.rs  services_category.rs  services_group.rs  services_schedule.rs  services_schedule_group.rs  services_task.rs  services_user.rs  services_user_group.rs  utilities.rs
