[package]
name = "scheduler-back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = { version = "4.9.0", features = ["actix-tls", "openssl", "rustls"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
itertools = "0.13.0"
log = { version = "0.4.22", features = ["serde", "std"] }
openssl = "0.10.66"
# polars = { version = "0.43.0", features = ["cloud", "csv", "dtype-full", "json", "lazy", "log", "parquet", "performant", "pivot", "random", "rolling_window", "rows", "serde"] }
# prusto = { version = "0.5.1", features = ["presto"] }
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "sqlx-postgres", "tls-native-tls", "uuid"] }
strum = { version = "0.26.3", features = ["derive"] }
utoipa = { version = "5.0.0-beta.0", features = ["actix_extras", "chrono", "debug", "uuid"] }
utoipa-swagger-ui = { version = "7.1.1-beta.0", features = ["actix-web",  "vendored"] }
uuid = { version = "1.10.0", features = ["fast-rng", "serde", "v4"] }
