[package]
name = "scheduler-back"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-cors = "0.7"
actix-web = { version = "4.9.0", features = ["actix-tls", "openssl", "rustls"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
itertools = "0.13.0"
log = { version = "0.4.22", features = ["serde", "std"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-json", "with-uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "sqlx-postgres", "tls-native-tls", "uuid"] }
strum = { version = "0.26.3", features = ["derive"] }
utoipa = { version = "5.2", features = ["actix_extras", "chrono", "debug", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["actix-web",  "vendored"] }
uuid = { version = "1.11.0", features = ["fast-rng", "serde", "v4"] }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs


