[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-json", "with-uuid"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
utoipa = "5.2.0"
